--- a/2006test.ioc
+++ b/2006test.ioc
@@ -3,10 +3,11 @@ CAD.formats=
 CAD.pinconfig=
 CAD.provider=
 CAN1.BS1=CAN_BS1_12TQ
+CAN1.BS2=CAN_BS2_1TQ
 CAN1.CalculateBaudRate=1000000
 CAN1.CalculateTimeBit=1000
 CAN1.CalculateTimeQuantum=71.42857142857143
-CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,Prescaler,BS1,NART,TXFP
+CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,Prescaler,BS1,NART,TXFP,BS2
 CAN1.NART=ENABLE
 CAN1.Prescaler=3
 CAN1.TXFP=DISABLE
@@ -26,18 +27,16 @@ Mcu.Name=STM32F407I(E-G)Hx
 Mcu.Package=UFBGA176
 Mcu.Pin0=PB8
 Mcu.Pin1=PG14
-Mcu.Pin10=PH0-OSC_IN
-Mcu.Pin11=PH1-OSC_OUT
-Mcu.Pin12=VP_SYS_VS_Systick
+Mcu.Pin10=VP_SYS_VS_Systick
 Mcu.Pin2=PA14
 Mcu.Pin3=PA13
 Mcu.Pin4=PB9
 Mcu.Pin5=PB7
 Mcu.Pin6=PB6
 Mcu.Pin7=PG9
-Mcu.Pin8=PC14-OSC32_IN
-Mcu.Pin9=PC15-OSC32_OUT
-Mcu.PinsNb=13
+Mcu.Pin8=PH0-OSC_IN
+Mcu.Pin9=PH1-OSC_OUT
+Mcu.PinsNb=11
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407IGHx
@@ -70,10 +69,6 @@ PB8.Mode=CAN_Activate
 PB8.Signal=CAN1_RX
 PB9.Mode=CAN_Activate
 PB9.Signal=CAN1_TX
-PC14-OSC32_IN.Mode=LSE-External-Oscillator
-PC14-OSC32_IN.Signal=RCC_OSC32_IN
-PC15-OSC32_OUT.Mode=LSE-External-Oscillator
-PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
 PG14.Mode=Asynchronous
 PG14.Signal=USART6_TX
 PG9.Mode=Asynchronous
@@ -97,7 +92,7 @@ ProjectManager.DeviceId=STM32F407IGHx
 ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.28.2
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
-ProjectManager.HeapSize=0x5000
+ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=false
 ProjectManager.LibraryCopy=1
@@ -109,7 +104,7 @@ ProjectManager.ProjectFileName=2006test.ioc
 ProjectManager.ProjectName=2006test
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
-ProjectManager.StackSize=0x5000
+ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=CMake
 ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
@@ -129,18 +124,20 @@ RCC.EthernetFreq_Value=168000000
 RCC.FCLKCortexFreq_Value=168000000
 RCC.FamilyName=M
 RCC.HCLKFreq_Value=168000000
-RCC.HSE_VALUE=25000000
+RCC.HSE_VALUE=12000000
 RCC.HSI_VALUE=16000000
 RCC.I2SClocksFreq_Value=192000000
-RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
+RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,PLLSourceVirtual,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
+RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
 RCC.MCO2PinFreq_Value=168000000
 RCC.PLLCLKFreq_Value=168000000
-RCC.PLLM=8
+RCC.PLLM=6
 RCC.PLLN=168
 RCC.PLLQCLKFreq_Value=84000000
+RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 RCC.RTCFreq_Value=32000
-RCC.RTCHSEDivFreq_Value=12500000
+RCC.RTCHSEDivFreq_Value=6000000
 RCC.SYSCLKFreq_VALUE=168000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.VCOI2SOutputFreq_Value=384000000
