--- a/2006test.ioc
+++ b/2006test.ioc
@@ -25,15 +25,15 @@ Mcu.IP5=USART6
 Mcu.IPNb=6
 Mcu.Name=STM32F407I(E-G)Hx
 Mcu.Package=UFBGA176
-Mcu.Pin0=PB8
-Mcu.Pin1=PG14
+Mcu.Pin0=PG14
+Mcu.Pin1=PA14
 Mcu.Pin10=VP_SYS_VS_Systick
-Mcu.Pin2=PA14
-Mcu.Pin3=PA13
-Mcu.Pin4=PB9
-Mcu.Pin5=PB7
-Mcu.Pin6=PB6
-Mcu.Pin7=PG9
+Mcu.Pin2=PA13
+Mcu.Pin3=PB7
+Mcu.Pin4=PB6
+Mcu.Pin5=PD0
+Mcu.Pin6=PG9
+Mcu.Pin7=PD1
 Mcu.Pin8=PH0-OSC_IN
 Mcu.Pin9=PH1-OSC_OUT
 Mcu.PinsNb=11
@@ -65,10 +65,12 @@ PB6.Mode=Asynchronous
 PB6.Signal=USART1_TX
 PB7.Mode=Asynchronous
 PB7.Signal=USART1_RX
-PB8.Mode=CAN_Activate
-PB8.Signal=CAN1_RX
-PB9.Mode=CAN_Activate
-PB9.Signal=CAN1_TX
+PD0.Locked=true
+PD0.Mode=CAN_Activate
+PD0.Signal=CAN1_RX
+PD1.Locked=true
+PD1.Mode=CAN_Activate
+PD1.Signal=CAN1_TX
 PG14.Mode=Asynchronous
 PG14.Signal=USART6_TX
 PG9.Mode=Asynchronous
