--- a/2006test.ioc
+++ b/2006test.ioc
@@ -30,10 +30,10 @@ Mcu.Pin1=PA14
 Mcu.Pin10=VP_SYS_VS_Systick
 Mcu.Pin2=PA13
 Mcu.Pin3=PB7
-Mcu.Pin4=PB6
-Mcu.Pin5=PD0
-Mcu.Pin6=PG9
-Mcu.Pin7=PD1
+Mcu.Pin4=PD0
+Mcu.Pin5=PG9
+Mcu.Pin6=PD1
+Mcu.Pin7=PA9
 Mcu.Pin8=PH0-OSC_IN
 Mcu.Pin9=PH1-OSC_OUT
 Mcu.PinsNb=11
@@ -61,8 +61,9 @@ PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
-PB6.Mode=Asynchronous
-PB6.Signal=USART1_TX
+PA9.Locked=true
+PA9.Mode=Asynchronous
+PA9.Signal=USART1_TX
 PB7.Mode=Asynchronous
 PB7.Signal=USART1_RX
 PD0.Locked=true
