--- a/2006test.ioc
+++ b/2006test.ioc
@@ -64,6 +64,7 @@ PA14.Signal=SYS_JTCK-SWCLK
 PA9.Locked=true
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
+PB7.Locked=true
 PB7.Mode=Asynchronous
 PB7.Signal=USART1_RX
 PD0.Locked=true
