--- a/2006test.ioc
+++ b/2006test.ioc
@@ -19,24 +19,30 @@ Mcu.Family=STM32F4
 Mcu.IP0=CAN1
 Mcu.IP1=NVIC
 Mcu.IP2=RCC
-Mcu.IP3=SYS
-Mcu.IP4=USART1
-Mcu.IP5=USART6
-Mcu.IPNb=6
+Mcu.IP3=SPI1
+Mcu.IP4=SYS
+Mcu.IP5=USART1
+Mcu.IP6=USART6
+Mcu.IPNb=7
 Mcu.Name=STM32F407I(E-G)Hx
 Mcu.Package=UFBGA176
 Mcu.Pin0=PG14
-Mcu.Pin1=PA14
-Mcu.Pin10=VP_SYS_VS_Systick
-Mcu.Pin2=PA13
-Mcu.Pin3=PB7
-Mcu.Pin4=PD0
-Mcu.Pin5=PG9
-Mcu.Pin6=PD1
-Mcu.Pin7=PA9
-Mcu.Pin8=PH0-OSC_IN
-Mcu.Pin9=PH1-OSC_OUT
-Mcu.PinsNb=11
+Mcu.Pin1=PB4
+Mcu.Pin10=PH0-OSC_IN
+Mcu.Pin11=PH1-OSC_OUT
+Mcu.Pin12=PA4
+Mcu.Pin13=PA7
+Mcu.Pin14=PB0
+Mcu.Pin15=VP_SYS_VS_Systick
+Mcu.Pin2=PB3
+Mcu.Pin3=PA14
+Mcu.Pin4=PA13
+Mcu.Pin5=PB7
+Mcu.Pin6=PD0
+Mcu.Pin7=PG9
+Mcu.Pin8=PD1
+Mcu.Pin9=PA9
+Mcu.PinsNb=16
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407IGHx
@@ -61,9 +67,22 @@ PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PA4.Locked=true
+PA4.Signal=GPIO_Output
+PA7.Locked=true
+PA7.Mode=Full_Duplex_Master
+PA7.Signal=SPI1_MOSI
 PA9.Locked=true
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
+PB0.Locked=true
+PB0.Signal=GPIO_Output
+PB3.Locked=true
+PB3.Mode=Full_Duplex_Master
+PB3.Signal=SPI1_SCK
+PB4.Locked=true
+PB4.Mode=Full_Duplex_Master
+PB4.Signal=SPI1_MISO
 PB7.Locked=true
 PB7.Mode=Asynchronous
 PB7.Signal=USART1_RX
@@ -148,6 +167,14 @@ RCC.VCOI2SOutputFreq_Value=384000000
 RCC.VCOInputFreq_Value=2000000
 RCC.VCOOutputFreq_Value=336000000
 RCC.VcooutputI2S=192000000
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_8
+SPI1.CLKPhase=SPI_PHASE_2EDGE
+SPI1.CLKPolarity=SPI_POLARITY_HIGH
+SPI1.CalculateBaudRate=10.5 MBits/s
+SPI1.Direction=SPI_DIRECTION_2LINES
+SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,CLKPolarity,CLKPhase
+SPI1.Mode=SPI_MODE_MASTER
+SPI1.VirtualType=VM_MASTER
 USART1.BaudRate=9600
 USART1.IPParameters=VirtualMode,BaudRate
 USART1.VirtualMode=VM_ASYNC
